Revert "#142 Fixed links which where were not properly visible in dark mode"

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,35 +1,37 @@
 .App {
   text-align: center;
-  background: var(--background-color);
+  background:  var(--background-color);
   color: var(--text-color);
   font-weight: var(--font-weight);
   transition: backgrounf 0.3s ease-in-out, color 0.6s ease-in-out;
 }
-/*changed color of --gray to lighter version so that links on scholarship
-page could be easily distinguishable*/
+
 :root {
-  --gray: rgba(29, 28, 28, 0.89);
+  --gray: rgb(29, 28, 28);
   --white: white;
   --black: black;
+
 }
 
-body.light {
+body.light{
   --background-color: var(--white);
   --text-color: var(--gray);
   --font-weight: 400;
+  
 }
-body.dark {
+body.dark{
   --background-color: var(--gray);
   --text-color: var(--white);
   --font-weight: 500;
+  
 }
 body {
-  background: var(--background-color);
+  background:  var(--background-color);
   color: var(--text-color);
   font-weight: var(--font-weight);
   transition: backgrounf 0.3s ease-in-out, color 0.6s ease-in-out;
 }
-nav {
+nav{
   background: var(--text-color);
 }
 nav a {
@@ -54,8 +56,8 @@ nav a {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-
-  background: var(--background-color);
+  
+  background:  var(--background-color);
   color: var(--text-color);
   font-weight: var(--font-weight);
   transition: backgrounf 0.3s ease-in-out, color 0.6s ease-in-out;
